add generic error handling

--- a/config/locales/en/en.yml
+++ b/config/locales/en/en.yml
@@ -2,3 +2,4 @@ en:
   errors:
     login_or_password_invalid: Invalid username or password
     unauthorized: Unauthorized access
+    internal_server_error: Internal server error
