--- a/config/locales/pt-BR/pt-BR.yml
+++ b/config/locales/pt-BR/pt-BR.yml
@@ -2,3 +2,4 @@ pt-BR:
   errors:
     login_or_password_invalid: Usuário ou senha inválidos
     unauthorized: Acesso não autorizado
+    internal_server_error: Erro interno do servidor
